cc_shared_library(
    name = "cloud_profiler_java_shared",
    deps = [":cloud_profiler_java"],
)

cc_library(
    name = "cloud_profiler_java",
    srcs = glob([
        "src/*.cc",
        "src/*.h",
    ]),
    deps = [
        ":javaprofiler",
        "//tools/jni:copy_jni_hdr_lib",
        "@com_github_google_glog//:glog",
    ],
    alwayslink = True,
)

cc_library(
    name = "javaprofiler",
    srcs = glob([
        "third_party/javaprofiler/*.cc",
    ]),
    hdrs = glob([
        "third_party/javaprofiler/*.h",
    ]),
    deps = [
        "//tools/jni:copy_jni_hdr_lib",
        "@com_github_google_glog//:glog",
    ],
)
