load(
    "@rules_java//toolchains:default_java_toolchain.bzl",
    "java_runtime_files",
)

package(default_visibility = ["//visibility:public"])

java_runtime_files(
    name = "jvmti_header",
    srcs = ["include/jvmti.h"],
)

genrule(
    name = "copy_link_jni_md_header",
    srcs = ["@rules_java//toolchains:jni_md_header-linux"],
    outs = ["jni_md.h"],
    cmd = "cp -f $< $@",
)

genrule(
    name = "copy_link_jni_header",
    srcs = ["@rules_java//toolchains:jni_header"],
    outs = ["jni.h"],
    cmd = "cp -f $< $@",
)

genrule(
    name = "copy_link_jvmti_header",
    srcs = [":jvmti_header"],
    outs = ["jvmti.h"],
    cmd = "cp -f $< $@",
)

cc_library(
    name = "copy_jni_hdr_lib",
    hdrs = [
        ":copy_link_jni_header",
        ":copy_link_jni_md_header",
        ":copy_link_jvmti_header",
    ],
    includes = ["."],
)
